--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,31 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #93f5f7;
+}
+
+html, body {
+  height: 100%;
+}
+
+.full-length-container {
+  width: 100%;
+  height: 30vh; 
+}
+
+.full-length-image {
+  width: 100%;
+  height: 100%; 
+  object-fit: cover;
+}
+
+.page-content {
+  padding: 10px; 
+  text-align: center;
+  max-width: 800px; 
+  margin: 30px auto; 
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
